--- a/Jupyter/CsvToGeojson.ipynb
+++ b/Jupyter/CsvToGeojson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,10 @@
     "for i, p in enumerate(PointsData):\n",
     "    lat, lon = p['纬度'], p['经度']\n",
     "    ft = Feature(geometry = Point((float(lon), float(lat),)),\n",
-    "        properties = {'name': p['类别'],\n",
-    "                'marker-size': 'medium','marker-symbol': ''})\n",
+    "         properties = {'year': p['年'], 'month': p['月'], 'day': p['日'],\n",
+    "                        'category': p['类别'], 'description': p['描述'], 'amount': p['金额'],\n",
+    "                        #'marker-size': 'medium','marker-symbol': ''\n",
+    "                        })\n",
     "    ft_all.append(ft)\n",
     "ft_colct = FeatureCollection(ft_all)\n",
     "\n",
